crates/oxvg_actions/src/actions/snapshots/oxvg_actions__actions__manipulate__test__optimise-2.snap
---
source: crates/oxvg_actions/src/actions/manipulate.rs
expression: actor.derive_state().unwrap()
---
DerivedState {
    history: [
        Optimise(
            None,
        ),
    ],
    selection: [],
    info: Some(
        Info {
            element_id: None,
            content_model: ContentModel {
                permitted_categories: ElementCategory(
                    0x0,
                ),
                permitted_elements: {},
            },
            attributes: AttrModel {
                expected_attribute_groups: AttributeGroup(
                    0x0,
                ),
                expected_attributes: {},
                values: {},
            },
            text: Some(
                Static(
                    "",
                ),
            ),
        },
    ),
    ui: None,
}
