crates/oxvg_actions/src/actions/snapshots/oxvg_actions__actions__manipulate__test__optimise.snap
---
source: crates/oxvg_actions/src/actions/manipulate.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg"/>
